# mtg_ontology

./: .cruft.json  404.html  CONTRIBUTING.md  Makefile  README.md  about.yaml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
Ability/: index.html
AbilityCollection/: index.html
AbilityKeyword/: index.html
Action/: index.html
ActionConstraint/: index.html
ActionSpecification/: index.html
ActivatedAbility/: index.html
AnyArtifact/: index.html
AnyCreature/: index.html
AnyEnchantment/: index.html
Artifact/: index.html
ArtifactToken/: index.html
Card/: index.html
CardCollection/: index.html
Color/: index.html
Condition/: index.html
Cost/: index.html
Counter/: index.html
Creature/: index.html
CreatureToken/: index.html
Enchantment/: index.html
EnchantmentToken/: index.html
Event/: index.html
Instant/: index.html
KeywordAbility/: index.html
KeywordCounter/: index.html
Land/: index.html
LifeCost/: index.html
Mana/: index.html
ManaCost/: index.html
NamedThing/: index.html
Permanent/: index.html
PersonStatus/: index.html
Player/: index.html
PowerToughnessCounter/: index.html
Property/: index.html
Rarity/: index.html
RuleStatement/: index.html
Sorcery/: index.html
Specification/: index.html
Spell/: index.html
StaticAbility/: index.html
Thing/: index.html
Time/: index.html
TimeConstraint/: index.html
TimeSpecification/: index.html
Token/: index.html
TriggeredAbility/: index.html
TurnPhase/: index.html
ValueConstraint/: index.html
ValueSpecification/: index.html
about/: index.html
(+109 files in other folders)
