[tool.poetry]
name = "mtg_ontology"
version = "0.1.0"
description = "An ontology describing Magic: The Gathering."
authors = ["Cyril Matthey-Doret <cmdoret@mailbox.org>"]
license = "GNU GPL v3.0"
readme = "README.md"
include = ["README.md", "src/mtg_ontology/schema", "project"]

[tool.poetry.dependencies]
python = "^3.9"
linkml-runtime = "^1.1.24"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.7.1"
linkml = "^1.3.5"
mkdocs-material = "^8.2.8"
mkdocs-mermaid2-plugin = "^0.6.0"
schemasheets = "^0.1.14"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
pattern = """
    (?x)                                                (?# ignore whitespace)
    ^(?P<base>\\d+(\\.\\d+)*)                             (?# 1.2.3)
    (-?((?P<stage>[a-zA-Z0-9]+)?\\.?(?P<revision>(pre|post)\\d+)?))?    (?# b0)
    (\\+(?P<tagged_metadata>.+))?$                       (?# e.g., +linux)
"""


[tool.poetry-dynamic-versioning.substitution]
files = ["src/mtg_ontology/__init__.py"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.extras]
docs = ["linkml", "mkdocs-material"]
